# evalys-privacy-engine

./: .env.example  .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  example.py  pyproject.toml  requirements.txt  setup.py
docs/: risk-model.md  threat-model.md
examples/: quick_demo.py
src/api/: routes.py  server.py
src/config/: settings.py
src/pge/: __init__.py  mode_selector.py  orchestrator.py  privacy_level.py
src/utils/: logger.py
tests/: __init__.py  test_mode_selector.py  test_orchestrator.py  test_privacy_level.py  test_risk_model.py
